# R-type_game_cpp

./: CMakeLists.txt  README.md  build.sh  conanfile.txt
ECS/: main.cpp
ECS/include/: ComponentManager.hpp  ComponentType.hpp  GameEngine.hpp  IComponent.hpp  IEntity.hpp  ILib.hpp  ISystem.hpp  Manager.hpp  TestSystem.hpp
ECS/include/BasicEngine/: BasicComponent.hpp  BasicSystem.hpp  ISystemNetwork.hpp  Player.hpp
ECS/include/system/: SystemCollision.hpp
ECS/src/: ComponentManager.cpp  GameEngine.cpp  ISystemNetwork.cpp  Manager.cpp
ECS/src/system/: SystemCollision.cpp
client/include/graphics/: GameScene.hpp  LobbyScene.hpp  LoginScene.hpp  Misc.hpp  Window.hpp
client/include/graphics/Interfaces/: ADrawable.hpp  IButton.hpp  IEvent.hpp  IInput.hpp  IRenderWindow.hpp  ISound.hpp  ISprite.hpp  IText.hpp
client/include/graphics/SFML/: SButton.hpp  SEvent.hpp  SInput.hpp  SRenderWindow.hpp  SSound.hpp  SSprite.hpp  SText.hpp
client/include/network/abstraction/: ANetwork.hpp
client/include/network/asio/: AsioNetwork.hpp
client/src/: main.cpp
client/src/graphics/: GameScene.cpp  LobbyScene.cpp  LoginScene.cpp  Misc.cpp  Window.cpp
client/src/graphics/Interfaces/: ADrawable.cpp
client/src/graphics/SFML/: SButton.cpp  SEvent.cpp  SInput.cpp  SRenderWindow.cpp  SSound.cpp  SSprite.cpp  SText.cpp
client/src/network/abstraction/: ANetwork.cpp
client/src/network/asio/: AsioNetwork.cpp
include/: struct.h
lib/include/: Monster1.hpp  Monster2.hpp  Monster3.hpp
lib/src/: Monster1.cpp  Monster2.cpp  Monster3.cpp
server/include/: Error.hpp
server/include/network/abstraction/: AClient.hpp  AGameServer.hpp  AServer.hpp
server/include/network/asio/: AsioClient.hpp  AsioGameServer.hpp  AsioServer.hpp
server/src/: main.cpp
server/src/network/abstraction/: AClient.cpp  AGameServer.cpp  AServer.cpp
server/src/network/asio/: AsioClient.cpp  AsioGameServer.cpp  AsioServer.cpp
